--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,75 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+
+@import '/node_modules/bootstrap/dist/css/bootstrap.min.css';
+
+/* @import '/node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css'; */
+
+$primary: #7AB730;
+$secondary: #FFD33C;
+$light: #F3F3F3;
+$dark: #212121;
+
+$font-family-sans-serif: 'Poppins', sans-serif;
+
+$headings-font-family: 'Roboto', sans-serif;
+
+$body-color: #656565;
+
+$headings-color: $dark;
+
+$headings-font-weight: 700;
+
+$display-font-weight: 700;
+
+$enable-responsive-font-sizes: true;
+
+$border-radius: false;
+
+$link-decoration: none;
+@import "./assets/css/style.css";
+@import "bootstrap/scss/bootstrap";
+/* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
+.searchmatch{
+    font-weight: bold;
+}
+
+
+body {
+    font-family: 'myCustomFont',Arial, Helvetica, sans-serif;
+}
+
+.btn-lightbox-carousel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
+    width: 8%;
+    height: 8%;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    background: 0 0;
+    border: 0;
+    cursor: pointer;
+}
+.close-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0;
+    color: #fff;
+    background: 0 0;
+    border: 0;
+    cursor: pointer;
+    width: 7%;
+    height: 10%;
+    z-index: 2;
+
+
+    .fa-times{
+        font-size: 25px;
+    }
+}
